# backend

./: Cargo.toml  deploy.sh  test.sqlite3
.github/workflows/: main.yml
migrations/2021-10-15-221717_initialize/: down.sql  up.sql
src/: auth.rs  games.rs  main.rs  model.rs  schema.rs  users.rs
