[package]
name = "erau-chess-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
tokio = { version = "1.12", features = ["rt", "macros", "rt-multi-thread"] }

log = "0.4"
env_logger = "0.9.0"
chrono = "0.4"
time = "0.3"
rand = { version = "0.8", features = ["getrandom"] }

chacha20poly1305 = "0.8" # audited by some sort of firm
rust-crypto = "^0.2" 

dotenv = "0.15"
data-encoding = "2.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
